pandas_tips_01のまとめを書いた

--- a/pandas_tips_01.ipynb
+++ b/pandas_tips_01.ipynb
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. 既存のレコードによって値を変えて新しい列をDataFrameに追加したい\n",
+    "# 1. ある1つのカラムによって新しい列をDataFrameに追加したい\n",
     "ここでは、`HouseAge`を`young`, `middle`, `old`の3階級で分類した列を追加します。  \n",
     "`young`と`middle`の分岐、`middle`と`old`の分岐はそれぞれ`quantile`で1/3と2/3を計算した値を使います。"
    ]
@@ -1026,7 +1026,9 @@
    "metadata": {},
    "source": [
     "## 検証結果\n",
-    "### 方法1〜3を比較結果"
+    "### 方法1〜3を比較\n",
+    "方法1は2万行のデータに対して21.6秒掛かっていて、方法2と方法3はどちらも1秒未満で終わっています。  \n",
+    "また、グラフから、方法1はサンプルサイズの増加に対して指数関数的に増加する懸念がありますので、これ以上大きなデータに対して使うことはできません。"
    ]
   },
   {
@@ -1170,8 +1172,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 方法2と方法3の処理時間は行数に対して線形に増えるのか？\n",
-    "方法2と3の処理時間は行数に対して線形に増えると言えるのでしょうか？"
+    "### 方法2と方法3をより大きなデータに対して検証する\n",
+    "方法2と方法3について、サンプルサイズを1000万まで増やして検証します。  \n",
+    "大きさ1000万のデータでは、方法2は1.99秒ですが、方法3は2.31秒と方法2に対して0.31秒程度遅くなります。  \n",
+    "一方で、サンプルサイズ1万のデータでは、逆に方法３の方が0.003秒程度速くなっているので、方法2は大きなデータを扱う場合に最適化されているようです。  "
    ]
   },
   {
@@ -1358,15 +1362,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. 複数のカラムによって値を変えて新しい列をDataFrameに追加したい"
+    "## まとめ\n",
+    "ある1つのカラムを使って新たなカラムを追加する場合の方法について検証しました。\n",
+    "\n",
+    "- 方法1　for文で新たな列を作る\n",
+    "- 方法2 DataFrameのスライシングで新たな列を作る\n",
+    "- 方法3 mapメソッドを使って新たな列を作る\n",
+    "\n",
+    "その結果、次の3つについて分かりました。  \n",
+    "\n",
+    "1. 方法1は一番遅く、サンプルサイズの増加に対して、処理時間の増加幅が大きいので、大きなデータに対して使えない。\n",
+    "2. 方法2は、3つの中で最も速かった。\n",
+    "3. 方法3は、サンプルサイズ1000万のデータに対して、方法2より0.31秒程遅かった。\n",
+    "\n",
+    "実際に使う場合は、方法3をおすすめします。  \n",
+    "理由は、方法2とほぼ遜色ない速さで処理できて、可読性とメンテナンス性が方法2よりも高いからです。  \n",
+    "方法2はどうしても処理能力を高めたい場合にのみ使うべきでしょう。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1385,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
