Tips02にコメントを追加

--- a/pandas_tips_02.ipynb
+++ b/pandas_tips_02.ipynb
@@ -6,11 +6,17 @@
    "source": [
     "# 2. 複数のカラムで全ての組み合わせを持ったマスタを作成したい\n",
     "すべての組み合わせを持ったマスタを作成する場合を検証します。  \n",
-    "このようなニーズがどこで発生するかというと、例えば、ゲーム内のユーザー毎に各アイテムの所持数の推移を日次で見たい場合に、ユーザー、日付、アイテムの全ての組み合わせを持ったマスターを作る必要があります。  \n",
-    "- ユーザーID (user_id)\n",
-    "- 日付 (date)\n",
-    "- アイテムID (item_id)\n",
-    "- アイテム名 (item_name)"
+    "これが必要になるのは、例えば、ゲーム内のユーザー毎に各アイテムの所持数の推移を日次で見たい場合です。  \n",
+    "ユーザーのアイテム購入数の擬似データを例にして考えていきます。  \n",
+    "擬似データは作成スクリプトで生成し、csvファイルに`game_user_item.csv`で保存しています。  \n",
+    "スクリプトは https://github.com/Katsuya-Ishiyama/pandas_tips/blob/master/generate_data_game_user_item.py にあります。\n",
+    "\n",
+    "- user_id　ユーザーID\n",
+    "- date　日付\n",
+    "- item_id　アイテムID\n",
+    "- item_name　アイテム名\n",
+    "- item_purchase_count　該当日に該当するアイテムを購入した個数\n",
+    "- payment　該当日に該当するアイテムに課金した金額"
    ]
   },
   {
@@ -133,6 +139,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "各ユーザーともに日付が１日も欠けないように集計するためには、`item_data`からユーザー、日付、アイテムの全ての組み合わせを持ったマスター(ここでは`master`と呼ぶ)を作り、それに`item_data`を結合して、各ユーザー毎にアイテム獲得数の累積を計算していきます。  \n",
+    "コードを例示すると、以下のようになります。\n",
+    "\n",
+    "```python\n",
+    "master = some_method(...)       # 何らかの方法でマスター作成\n",
+    "tmp = master.merge(\n",
+    "    right=item_get,\n",
+    "    how='left',\n",
+    "    on=['user_id', 'data', 'item_id', 'item_name']\n",
+    ")\n",
+    "tmp.sort_values(['user_id', 'item_id', 'data'], inplace=True)\n",
+    "item_owned = tmp.groupby(['user_id', 'item_id']).item_purchase_count.rolling_sum(window=2)\n",
+    "```\n",
+    "\n",
+    "`master`を作る処理は、全組み合わせを作成する必要があるため、一般的にはかなり重たい処理です。  \n",
+    "ここを速度を気にせずに書いてしまうと、かなり遅い処理が出来上がってしまうので、どのような方法が良いのかを検討していきます。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -150,7 +178,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 方法1　1行毎にDataFrame化して`.append()`で積み上げる"
+    "## 方法1　1行毎にDataFrame化して`.append()`で積み上げる\n",
+    "まずは、作成した行を１回ずつDataFrameにしていく方法です。  \n",
+    "初心者が書いてしまいがちなコードです。"
    ]
   },
   {
@@ -307,7 +337,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 方法2　listで全組み合わせ作成後にDataFrame化する　`.append()`バージョン"
+    "## 方法2　listで全組み合わせ作成後にDataFrame化する　`.append()`バージョン\n",
+    "listにデータを吐き出しておいて、すべての組み合わせを作成後に一括してDataFrame化する方法です。  \n",
+    "for文をいくつか重ねる必要がありますが、重たいDataFrameの操作を回避できるので、その分高速化が見込める方法です。"
    ]
   },
   {
@@ -471,7 +503,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 方法3　listで全組み合わせ作成後にDataFrame化する　`.extend()`バージョン"
+    "## 方法3　listで全組み合わせ作成後にDataFrame化する　`.extend()`バージョン\n",
+    "こちらも方法2と同じようにすべての組み合わせを作成した後に、一括してDataFrame化する方法です。  \n",
+    "方法2と異なる点は、`append`メソッドではなく`extend`メソッドを使っていることです。  \n",
+    "このようにすることでfor文を1つ減らすことができ、その分、方法2よりも高速化が見込めます。  \n",
+    "難点としては、方法2よりも分かりづらいコードになるため、間違いを起こしやすいです。"
    ]
   },
   {
@@ -632,6 +668,35 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 検証結果\n",
+    "今回はユーザー数を変えることで総レコード数を変化させていきます。  \n",
+    "ユーザー数と総レコード数の関係は下表の通りです。\n",
+    "\n",
+    "|ユーザー数 |日数 |アイテム数 |総レコード数 |\n",
+    "|-------------:|-----:|------------:|-------------:|\n",
+    "|10 |365 |10 |36,500 | \n",
+    "|20 |365 |10 |73,000 |\n",
+    "|30 |365 |10 |109,500 |\n",
+    "|50 |365 |10 |182,500 |\n",
+    "|100 |365 |10 |365,000 |\n",
+    "|500 |365 |10 |1,825,000 |\n",
+    "|1,000 |365 |10 |3,650,000 |\n",
+    "|5,000 |365 |10 |18,250,000 |\n",
+    "|10,000 |365 |10 |36,500,000 |\n",
+    "\n",
+    "### ユーザー数を10, 20, 30と変化させて方法1〜3を比較\n",
+    "まずはユーザー数を10, 20, 30と変化させて方法1〜3を試します。  \n",
+    "総レコード数はそれぞれ36,500、73,000、109,500となっています。  \n",
+    "方法1は他の2つに比べてかなり遅く、ユーザー数30人で592秒（約10分）掛かっていることが分かります。  \n",
+    "機械学習や統計を使った分析を行うサービスでユーザー数が30人しかいないことは、例え、アクティブユーザーのみに絞ったとしてもありえないでしょう。  \n",
+    "どんなビジネスモデルなのかにも依ってユーザー数は変わりますが、それでも方法1を安易に使うことはできません。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -661,7 +726,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -733,6 +800,18 @@
    ],
    "source": [
     "process_time_measure.process_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 方法2と方法3をユーザー数を10000まで変化させて比較\n",
+    "次に方法2と方法3に絞って、ユーザー数を10, 50, 100, 500, 1000, 5000, 10000と変化させて比較検証します。  \n",
+    "ユーザー数10000人（レコード数36,500,000）では、方法2は15.7秒に対し方法3は11.3秒と方法3が4.4秒程速くなっています。  \n",
+    "逆に言えば、for文を1つ減らした結果、36,500,000行の処理時間の違いはわずか4.4秒しかなかった、とも言えます。  \n",
+    "落としたforが処理していたデータ数に依るところが大きいので、例えばアイテム数が50, 100とある場合には、方法3の有効性が増します。  \n",
+    "アイテムのような項目はその時々によって数が増減するものなので、数が増えても処理時間の増加が小さい方法を選ぶべきでしょう。"
    ]
   },
   {
@@ -858,6 +937,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## まとめ\n",
+    "ゲーム内のアイテム所持数を例に、マスターテーブルを作る方法について3パターンを検証しました。  \n",
+    "その結果\n",
+    "\n",
+    "- 方法１は他の2つの方法に比べて比較にならないほど遅く、実用的ではない\n",
+    "- 方法2は２番目に速く、3650万行を処理した時でも方法3に比べて4.4秒しか遅くならない\n",
+    "- 方法3はこの中では1番速いが、`.extend()`の部分が分かりづらく、ミスしやすい\n",
+    "\n",
+    "ことが分かりました。  \n",
+    "`extend`メソッドの部分が分かりづらいものの、データがスケールした場合のことを考えると方法3を採用することをオススメします。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -881,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
